# datasourcer

./: README.md  pyproject.toml
datasourcer/: datasourcer.py  marshalling.py
tests/: test_spec.yml
